# huphys

./: app.html  app.py  model.py  pyproject.toml
model/: blood.py  body.py  bones.py  brain.py  fat.py  heart.py  intestines.py  kidneys.py  liver.py  lungs.py  muscles.py  organ.py  pancreas.py  skin.py  spleen.py  stomach.py  thyroid.py
